[package]
name = "carina_cli"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]

[dependencies]
base64 = "0.9.2"
carina_core = { path = "../core" }
carina_core_protocol = { path = "../core_protocol" }
clap = "2.31.2"
log = "0.4.2"
loggify = "1.0.0"
prettytable-rs = "0.7.0"
protocol_builder_parser = { git = "https://github.com/lholznagel/rust-protocol-builder-parser" }
sodiumoxide = "0.1.0"