[package]
authors = ["lholznagel <contact@lholznagel.info>"]
name = "blockchain_connection_manager"
version = "0.1.0"

[dependencies]
blockchain_file = { path = "../file" }
blockchain_hooks = { path = "../hooks" }
blockchain_logging = { path = "../logging" }
blockchain_network = { path = "../network" }
blockchain_protocol = { path = "../protocol" }
time = "0.1.38"