[package]
name = "carina_core"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]

[dependencies]
base64 = "0.9.2"
carina_core_protocol = { path = "../core_protocol" }
clippy = { version = "0.0.207", optional = true }
failure = "0.1.1"
futures = "0.1.21"
futures-cpupool = "0.1.8"
log = "0.4.2"
sodiumoxide = "0.1.0"
yaml-rust = "0.4.0"

[features]
default = []
dev = ["clippy"]