[package]
name = "carina_core_protocol"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]

[dependencies]
clippy = { version = "0.0.207", optional = true }
failure = "0.1.1"
log = "0.4.2"
sodiumoxide = "0.1.0"

[dev-dependencies]
criterion = "0.2.3"

[features]
default = []
dev = ["clippy"]

[[bench]]
name = "payload"
harness = false