[package]
authors = ["lholznagel <contact@lholznagel.info>"]
name = "blockchain_debug"
version = "0.1.0"

[dependencies]
blockchain_hooks = { path = "../hooks" }
blockchain_logging = { path = "../logging" }
blockchain_protocol = { path = "../protocol" }
clap = "2.29.2"
futures-cpupool = "0.1.8"
rand = "0.4.2"

clippy = { version = "0.0.186", optional = true }

[features]
default = []
dev = ["clippy"]