[package]
authors = ["lholznagel <contact@lholznagel.info>"]
name = "carina_debug"
version = "0.1.0"

[dependencies]
carina_hooks = { path = "../hooks" }
carina_logging = { path = "../logging" }
carina_protocol = { path = "../protocol" }
clap = "2.29.2"
futures-cpupool = "0.1.8"
rand = "0.4.2"
log = "0.4.1"

clippy = { version = "0.0.186", optional = true }

[features]
default = []
dev = ["clippy"]