[package]
name = "blockchain_hole_puncher"
version = "0.1.0"
authors = ["lholznagel <github@lholznagel.info>"]

[dependencies]
blockchain_hooks = { path = "../hooks" }
blockchain_logging = { path = "../logging" }
blockchain_protocol = { path = "../protocol" }
futures-cpupool = "0.1.8"

clippy = { version = "0.0.186", optional = true }

[features]
default = []
dev = ["clippy"]