[package]
authors = ["lholznagel <contact@lholznagel.info>"]
name = "carina_peer"
version = "0.1.0"

[dependencies]
carina_hooks = { path = "../hooks" }
carina_protocol = { path = "../protocol" }
clippy = { version = "0.0.186", optional = true }
futures-cpupool = "0.1.8"
log = "0.4.1"
rust-crypto = "0.2.36"
time = "0.1.39"
sodiumoxide = "0.0.16"

[features]
default = []
dev = ["clippy"]