[package]
name = "carina_peer_cli"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]

[dependencies]
base64 = "0.9.1"
carina_peer = { path = "../peer" }
clap = "2.31.2"
clippy = { version = "0.0.195", optional = true }
log = { version = "0.4.1", features = ["std"] }
loggify = "1.0.0"
serde = "1.0.43"
serde_derive = "1.0.43"
serde_yaml = "0.7.3"
sodiumoxide = "0.0.16"

[features]
default = []
dev = ["clippy"]