[package]
authors = ["lholznagel <contact@lholznagel.info>"]
name = "carina_peer_test"
version = "0.1.0"

[dependencies]
carina_hooks = { path = "../hooks" }
carina_peer = { path = "../peer" }
carina_protocol = { path = "../protocol" }
clippy = { version = "0.0.186", optional = true }
futures = "0.1.8"
futures-cpupool = "0.1.8"

[features]
default = []
dev = ["clippy"]