[package]
authors = ["lholznagel <contact@lholznagel.info>"]
name = "carina_protocol"
version = "0.1.0"

[dependencies]
clippy = { version = "0.0.195", optional = true }
failure = "0.1.1"
sodiumoxide = "0.0.16"
time = "0.1.38"

[dev-dependencies]
quickcheck = "0.6.2"

[features]
default = []
dev = ["clippy"]