[package]
name = "carina_web_connector"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]

[dependencies]
actix = "0.5.6"
actix-web = "0.5.6"
base64 = "0.9.1"
carina_logging = { path = "../logging" }
clippy = { version = "0.0.195", optional = true }
log = "0.4.1"
serde = "1.0.43"
serde_derive = "1.0.43"
serde_yaml = "0.7.3"
sodiumoxide = "0.0.16"

[features]
default = []
dev = ["clippy"]